# Learn-Fastapi

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4953c837573c_add_user_table.py  4cead265b862_auto_vote.py  81b214d439a4_add_last_few_columns_to_posts_table.py  9a6695c6f29a_create_posts_table.py  c4a0fb923fdf_add_foreign_key_to_posts_table.py  f3b9458ca21c_add_content_column_to_posts_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
